[package]
name = "VoeDL"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {version = "0.14", features = ["full"]}
tokio = { version = "1", features = ["full"] }
reqwest = "*"
hyper-tls = "0.5.0"

[profile.nodebug]
inherits = "release"
debug = false
